<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" 
        android:id="@+id/header"/>

    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/destination" />
    
    <EditText
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" 
        android:id="@+id/destination" />
        
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/message"
  />

    <EditText
        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSend"
        android:text="@string/send_button_text" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSettings"
        android:text="@string/settings_button_text" />
    
</LinearLayout>